<resources>
    <string name="app_name">Layout</string>
    <string name="logo">logo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter Email</string>
</resources>
