<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:padding="32dp"
              android:orientation="vertical">

    <ImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/f"
            android:contentDescription="@string/logo"/>

    <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="20sp"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="32dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/txv_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"/>
        <TextView
                android:id="@+id/txv_forgot_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>